# get-up-or-else

./: .gitignore  LICENSE  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts
app/src/androidTest/java/com/getuporelse/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ExerciseEngine.cpp  ExerciseEngine.h  JniBridge.cpp  LandmarkSmoother.cpp  LandmarkSmoother.h  MathUtils.cpp  MathUtils.h  log_collector.ps1
app/src/main/java/com/getuporelse/: GetUpOrElseApp.kt  MainActivity.kt
app/src/main/java/com/getuporelse/core/constants/: AlarmUiConstants.kt  Constants.kt  ExerciseUiConstants.kt  PoseConstants.kt
app/src/main/java/com/getuporelse/core/di/: AppModule.kt
app/src/main/java/com/getuporelse/data/local/: AlarmForegroundService.kt  AlarmReceiver.kt  AndroidAlarmController.kt  AndroidAlarmScheduler.kt  AndroidDebugAlarmController.kt  BootReceiver.kt
app/src/main/java/com/getuporelse/data/mediapipe/: LandmarkSmoother.kt  MediaPipePoseAnalyzer.kt
app/src/main/java/com/getuporelse/data/ndk/: NativePushUpEngine.kt
app/src/main/java/com/getuporelse/data/repository/: DataStoreAlarmRepository.kt
app/src/main/java/com/getuporelse/domain/alarm/: AlarmController.kt  AlarmRepository.kt  AlarmScheduler.kt  DebugAlarmController.kt  (+2 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/getuporelse/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+18 files in other folders)
